<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".Admin.AdminViewLeaveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/assignTaskBar"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        app:cardBackgroundColor="@color/bg_color"
        app:cardElevation="0.1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="@dimen/_10sdp"

            android:background="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_medium"
            android:text="Student Leave Details"
            android:textColor="@color/title_text"
            android:textSize="@dimen/_16ssp" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignTaskBar">


        <LinearLayout
            android:id="@+id/taskAssignLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_15sdp">

            <!--task title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="Student PRN"
                android:textColor="@color/title_text"
                android:textSize="@dimen/_14ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">

                <EditText
                    android:id="@+id/leaveStudentPRN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/task_text"
                    android:textSize="@dimen/_12ssp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/student_name"
                android:textColor="@color/title_text"
                android:textSize="@dimen/_14ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">

                <EditText
                    android:id="@+id/leaveStudentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/task_text"
                    android:textSize="@dimen/_12ssp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"
                android:text="Leave Status"

                android:textColor="@color/title_text"
                android:textSize="@dimen/_14ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">

                <EditText
                    android:id="@+id/leaveCurrentStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/task_text"
                    android:textSize="@dimen/_12ssp" />

            </androidx.cardview.widget.CardView>


            <!--            priority-->


            <!--pick date-->

            <!--Participants-->

            <!--descripation-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <RelativeLayout
                    android:id="@+id/centerinparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/starttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="From"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/starttext"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:elevation="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_5sdp">


                    <TextView
                        android:id="@+id/startDate"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:fontFamily="@font/inter_medium"
                        android:hint="@string/start_date_msg"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/endtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/centerinparent"
                    android:fontFamily="@font/inter_medium"
                    android:text="To"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/endtext"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_toRightOf="@+id/centerinparent"
                    app:cardCornerRadius="@dimen/_5sdp">


                    <TextView
                        android:id="@+id/dueDate"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:fontFamily="@font/inter_medium"
                        android:hint="@string/due_date_msg"
                        android:padding="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                </androidx.cardview.widget.CardView>


            </RelativeLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"
                android:text="Duration"
                android:textColor="@color/title_text"
                android:textSize="@dimen/_14ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">

                <EditText
                    android:id="@+id/leaveDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/enter_duration"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/task_text"
                    android:textSize="@dimen/_12ssp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"
                android:text="Destination"
                android:textColor="@color/title_text"
                android:textSize="@dimen/_14ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">

                <EditText
                    android:id="@+id/leaveDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/enter_destination"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/task_text"
                    android:textSize="@dimen/_12ssp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"
                android:text="Parent Contact"
                android:textColor="@color/title_text"
                android:textSize="@dimen/_14ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp">

                <EditText
                    android:id="@+id/leaveParentContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/enter_parent_contact"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/task_text"
                    android:textSize="@dimen/_12ssp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/reason"
                android:textColor="@color/black"

                android:textSize="@dimen/_14ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_5sdp">

                <EditText
                    android:id="@+id/leaveReason"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="top"
                    android:hint="This is where you write reason....."
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/task_text"
                    android:textSize="@dimen/_12ssp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rejectLeave"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_reject_leave"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_medium"
            android:paddingBottom="@dimen/_5sdp"
            android:text="Reject"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/approveLeave"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_approve_leave"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_medium"
            android:paddingBottom="@dimen/_5sdp"
            android:text="Approve"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>