<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".Admin.Attendace.MarkAttendaceActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/assignTaskBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:cardBackgroundColor="@color/bg_color"
        app:cardElevation="0.1dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/dashBoardHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:text="Admin Dashboard"
            android:textColor="@color/desc_text"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/AdminMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/bg_color"
            android:src="@drawable/ic_dot">

        </ImageButton>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignTaskBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/AdminLaundry"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_above="@+id/centerinparent"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="11dp"
                android:layout_toLeftOf="@+id/centerinparent"
                android:backgroundTint="@color/low_green"

                app:cardCornerRadius="@dimen/_20sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/laundry_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/laundry"
                    android:textAlignment="center"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/_14ssp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/AdminLeave"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_above="@+id/centerinparent"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="11dp"
                android:layout_toLeftOf="@+id/centerinparent"
                android:backgroundTint="@color/low_yellow"
                app:cardCornerRadius="@dimen/_20sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/leave_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/leave"
                    android:textAlignment="center"
                    android:textColor="@color/dark_yellow"
                    android:textSize="@dimen/_14ssp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/AdminComplaint"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_above="@+id/centerinparent"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="11dp"
                android:layout_toLeftOf="@+id/centerinparent"
                android:backgroundTint="@color/low_red"
                app:cardCornerRadius="@dimen/_20sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/complaint_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/complaint"
                    android:textAlignment="center"
                    android:textColor="@color/dark_red"
                    android:textSize="@dimen/_14ssp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/AdminAttendance"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_above="@+id/centerinparent"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="11dp"
                android:layout_toLeftOf="@+id/centerinparent"
                android:backgroundTint="@color/low_pink"
                app:cardCornerRadius="@dimen/_20sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/attendance_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="Attendance"
                    android:textAlignment="center"
                    android:textColor="@color/dark_pink"
                    android:textSize="@dimen/_14ssp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/C_Hostel"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_above="@+id/centerinparent"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="11dp"
                android:layout_toLeftOf="@+id/centerinparent"
                android:backgroundTint="@color/low_red"
                app:cardCornerRadius="@dimen/_20sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/complaint_icon"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="C Hostel"
                    android:textAlignment="center"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/_14ssp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/D_Hostel"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_above="@+id/centerinparent"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="11dp"
                android:layout_toLeftOf="@+id/centerinparent"
                android:backgroundTint="@color/low_pink"
                app:cardCornerRadius="@dimen/_20sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/attendance_icon"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="D Hostel"
                    android:textAlignment="center"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/_14ssp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>